--- a/MakeFileWindows
+++ b/MakeFileWindows
@@ -28,6 +28,7 @@ all: $(TARGETDIR_TimberHead.exe)/TimberHead.exe
 	-Iinclude\tinyxml2\tinyxml2.cpp
 	
 OBJS_TimberHead.exe =  \
+	$(TARGETDIR_TimberHead.exe)/App.o \
 	$(TARGETDIR_TimberHead.exe)/Parser.o \
 	$(TARGETDIR_TimberHead.exe)/ParserIMDB.o \
 	$(TARGETDIR_TimberHead.exe)/ParserTVDB.o \
@@ -49,6 +50,9 @@ $(TARGETDIR_TimberHead.exe)/TimberHead.exe: $(TARGETDIR_TimberHead.exe) $(OBJS_T
 
 
 # Compile source files into .o files
+$(TARGETDIR_TimberHead.exe)/App.o: $(TARGETDIR_TimberHead.exe) Interface\App.cpp
+	$(COMPILE.cc) $(CCFLAGS_TimberHead.exe) $(CPPFLAGS_TimberHead.exe) -o $@ Interface\App.cpp
+	
 $(TARGETDIR_TimberHead.exe)/Parser.o: $(TARGETDIR_TimberHead.exe) Analyse\Parser.cpp
 	$(COMPILE.cc) $(CCFLAGS_TimberHead.exe) $(CPPFLAGS_TimberHead.exe) -o $@ Analyse\Parser.cpp
 
@@ -82,6 +86,7 @@ $(TARGETDIR_TimberHead.exe)/main.o: $(TARGETDIR_TimberHead.exe) main.cpp
 clean:
 	rm -f \
 		$(TARGETDIR_TimberHead.exe)/TimberHead.exe \
+		$(TARGETDIR_TimberHead.exe)/App.o \
 		$(TARGETDIR_TimberHead.exe)/Parser.o \
 		$(TARGETDIR_TimberHead.exe)/ParserIMDB.o \
 		$(TARGETDIR_TimberHead.exe)/ParserTVDB.o \
